# MCSM

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  main.cpp
Algorithm/: Algorithm.hpp  MonteCarlo.cpp  MonteCarlo.hpp
Lattice/: Lattice.hpp  Site.cpp  Site.hpp  Square.cpp  Square.hpp  Triangular.cpp  Triangular.hpp
Model/: Heisenberg.cpp  Heisenberg.hpp  Ising.cpp  Ising.hpp  Model.hpp
Plot/: AverageEnergyPlot.cpp  MagneticStatePlot.cpp
Spin/: Spin.hpp
src/: WebSocket.cpp  WebSocket.hpp  main.cpp
src/Algorithm/: Algorithm.hpp
src/Lattice/: Lattice.hpp
